# ChangeLog for media-libs/netpbm
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.21 2003/04/19 19:28:39 lostlogic Exp $

*netpbm-10.11.5-r2 (20 Mar 2003)

  14 Apr 2003; Stefan Jones <cretin@gentoo.org> netpbm-10.11.5-r2.ebuild:
  Added -fPIC to CFLAGS for prelink.

  20 Mar 2003; Graham Forest <vladimir@gentoo.org> netpbm-10.11.4-r1.ebuild,
  netpbm-10.11.5-r2.ebuild:
  Removed usage of pic USE flag

*netpbm-10.11.5-r1 (06 March 2003)

  09 Mar 2003; Aron Griffis <agriffis@gentoo.org> netpbm-10.11.5-r1.ebuild:
  Mark stable on alpha

  06 March 2003; Martin Schlemmer <azarah@gentoo.org> netpbm-10.11.5-r1.ebuild :
  Fix /usr/lib/libnetpbm.so symlink not being created.

*netpbm-10.11.5 (13 Feb 2003)

  22 Feb 2003; Aron Griffis <agriffis@gentoo.org> netpbm-10.11.5.ebuild :
  Add ~alpha to KEYWORDS

  14 Feb 2003; Brandon Low <lostlogic@lostlogicx.com> *.ebuild:
  assert ebuild.workswith(newdistcc);
  Fixed MAKEOPTS, and CC so that this doesn't get errors
  building on a distcc box (of course it has to be built
  with -j1 so distcc could only distribute all or none of
  the processes, but that might be of use, and at least
  it doesn't break.)

  13 Feb 2003; Nick Hadaway <raker@gentoo.org> netpbm-10.11.5.ebuild,
  files/digest-netpbm-10.11.5 :
  Version bump.

*netpbm-10.11.4 (04 Jan 2002)

  30 Jan 2003; Mark Guertin <gerk@gentoo.org> netpbm-10.11.4.ebuild :
  Set to stable ppc keyword.  Works great here, no more svgalib issues.

  12 Jan 2003; Martin Holzer <mholzer@gentoo.org> netpbm-10.11.4.ebuild :
  Added Prelink ability. Closes #13650

  07 Jan 2003; Martin Holzer <mholzer@gentoo.org> netpbm-10.11.4.ebuild :
  A little fix with SVGALIB.

  04 Jan 2003; Martin Holzer <mholzer@gentoo.org> netpbm-10.11.4.ebuild files/digest-netpbm-10.11.4 ChangeLog :
  Version bumped.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 