@@ -1,8 +1,12 @@
 # ChangeLog for media-libs/netpbm
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.21 2003/04/19 19:28:39 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.22 2003/04/19 19:36:25 lostlogic Exp $
 
 *netpbm-10.11.5-r2 (20 Mar 2003)
+
+  19 Apr 2003; Brandon Low <lostlogic@gentoo.org> netpbm-10.11.5-r2.ebuild,
+  netpbm-9.12-r4.ebuild:
+  Add replace-flags for ultrasparcs
 
   14 Apr 2003; Stefan Jones <cretin@gentoo.org> netpbm-10.11.5-r2.ebuild:
   Added -fPIC to CFLAGS for prelink.
